node-app-chart/templates/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: node-hello-service 
spec: 
  selector: 
    app: node-hello 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 3000 
  type: NodePort
